--- a/fronted-mejor/sobre_nosotros.html
+++ b/fronted-mejor/sobre_nosotros.html
@@ -11,59 +11,61 @@
 <body>
   <header>
    <nav class="navbar">
-  <div class="nav-left">
-    <a href="index.html" title="Inicio">
-      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
-    </a>
-    <a href="sobre_nosotros.html" title="Sobre Nosotros">
-      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
-    </a>
-    <a href="opiniones.html" title="Opiniones">
-      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
-    </a>
-    <a href="menu.html" title="Menú">
-      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
-    </a>
-  </div>
-  <div class="nav-right">
-    <a href="reservas.html" title="Reservas">
-      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
-    </a>
-    <a href="calendario.html" title="Calendario">
-      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
-    </a>
-  </div>
-</nav>
+    <div class="nav-left">
+      <a href="index.html" title="Inicio" class="js-link nav-text">
+        Inicio
+      </a>
+      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
+        Sobre Nosotros
+      </a>
+      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
+        Opiniones
+      </a>
+      <a href="menu.html" title="Menú" class="js-link nav-text">
+        Menú
+      </a>
+    </div>
+    <div class="nav-right">
+      <a href="reservas.html" title="Reservas" class="js-link nav-text">
+        Reservas
+      </a>
+      <a href="calendario.html" title="Calendario" class="js-link nav-text">
+        Calendario
+      </a>
+    </div>
+   </nav>
   </header>
   <main>
-    <section>
-      <h1>Sobre Nosotros</h1>
-      <p>
-        Mestiza Sabores Caseros nació en Colonia del Sacramento en plena pandemia de 2020, cuando Daniel Abbona y su
-        familia decidieron transformar la incertidumbre en oportunidad. Lo que comenzó con una simple mesita en la
-        feria de los domingos, hoy es un emprendimiento gastronómico que se ha convertido en infaltable en ferias,
-        eventos y encuentros locales.
-      </p>
-      <p>
-        Nuestro diferencial está en la artesanía y el corazón familiar que ponemos en cada plato. Elaboramos todo
-        nosotros mismos: desde las tortillas y encurtidos hasta las salsas picantes y aderezos que acompañan nuestros
-        tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
-        constante y reconocible, que represente quiénes somos.
-      </p>
-      <p>
-        De la feria y la rambla pasamos a tener nuestro propio food truck, el primero en Colonia, que nos permitió
-        ampliar la propuesta con hamburguesas de estilo americano y seguir creciendo junto a la comunidad que nos
-        apoya.
-      </p>
-      <p>
-        Hoy seguimos recorriendo ferias gastronómicas y cerveceras, ofreciendo delivery cuando no estamos en eventos,
-        y acompañando también a familias, amigos y empresas en celebraciones privadas.
-      </p>
-      <p>
-        Mestiza es eso: comida rápida hecha con cariño, tradición y el sabor casero de Uruguay, que creció desde lo
-        simple para convertirse en un lugar de encuentro y disfrute.
-      </p>
-    </section>
+    <div class="container my-5">
+      <section>
+        <h1 class="text-center">Sobre Nosotros</h1>
+        <p>
+          Mestiza Sabores Caseros nació en Colonia del Sacramento en plena pandemia de 2020, cuando Daniel Abbona y su
+          familia decidieron transformar la incertidumbre en oportunidad. Lo que comenzó con una simple mesita en la
+          feria de los domingos, hoy es un emprendimiento gastronómico que se ha convertido en infaltable en ferias,
+          eventos y encuentros locales.
+        </p>
+        <p>
+          Nuestro diferencial está en la artesanía y el corazón familiar que ponemos en cada plato. Elaboramos todo
+          nosotros mismos: desde las tortillas y encurtidos hasta las salsas picantes y aderezos que acompañan nuestros
+          tacos, smash burgers, bocatas y opciones vegetarianas y veganas. Cada bocado busca mantener un sabor único,
+          constante y reconocible, que represente quiénes somos.
+        </p>
+        <p>
+          De la feria y la rambla pasamos a tener nuestro propio food truck, el primero en Colonia, que nos permitió
+          ampliar la propuesta con hamburguesas de estilo americano y seguir creciendo junto a la comunidad que nos
+          apoya.
+        </p>
+        <p>
+          Hoy seguimos recorriendo ferias gastronómicas y cerveceras, ofreciendo delivery cuando no estamos en eventos,
+          y acompañando también a familias, amigos y empresas en celebraciones privadas.
+        </p>
+        <p>
+          Mestiza es eso: comida rápida hecha con cariño, tradición y el sabor casero de Uruguay, que creció desde lo
+          simple para convertirse en un lugar de encuentro y disfrute.
+        </p>
+      </section>
+    </div>
   </main>
 <footer>
   <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
