--- a/fronted-mejor/index.html
+++ b/fronted-mejor/index.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio - Restaurante Mestiza</title>
-  <link rel="stylesheet" href="./style/style.css">
-</head>
-<body class="pagina-negra"></body>
-  <header>
-   <nav class="navbar">
-  <div class="nav-left">
-    <a href="index.html" title="Inicio">
-      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
-    </a>
-    <a href="sobre_nosotros.html" title="Sobre Nosotros">
-      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
-    </a>
-    <a href="opiniones.html" title="Opiniones">
-      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
-    </a>
-    <a href="menu.html" title="Menú">
-      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
-    </a>
-  </div>
-  <div class="nav-right">
-    <a href="reservas.html" title="Reservas">
-      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
-    </a>
-    <a href="calendario.html" title="Calendario">
-      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
-    </a>
-  </div>
-</nav>
-  </header>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <main>
+  <link rel="stylesheet" href="./style/style.css" data-global="true">
+
+</head>
+
+<body class="pagina-negra"></body>
+<header>
+  <nav class="navbar">
+    <div class="nav-left">
+      <a href="index.html" title="Inicio" class="js-link nav-text">
+        Inicio
+      </a>
+      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
+        Sobre Nosotros
+      </a>
+      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
+        Opiniones
+      </a>
+      <a href="menu.html" title="Menú" class="js-link nav-text">
+        Menú
+      </a>
+    </div>
+    <div class="nav-right">
+      <a href="reservas.html" title="Reservas" class="js-link nav-text">
+        Reservas
+      </a>
+      <a href="calendario.html" title="Calendario" class="js-link nav-text">
+        Calendario
+      </a>
+    </div>
+  </nav>
+</header>
+
+<main>
   <div class="logo-container">
     <img src="imagenes/FOTO.png" alt="Logo Mestiza" class="logo-mestiza">
   </div>
@@ -44,9 +49,65 @@
     Lunes a Viernes: 17:00 a 19:00<br>
     Sábados y Domingos: 13:00 a 23:00
   </p>
-  <div class="contenido-blanco"></div>
-</main>
+  <div class="contenido-blanco">
 
+    <div class="container pt-5">
+      <h2 class="text-center mb-4">Nuestras Especialidades</h2>
+
+      <div class="d-flex justify-content-center align-items-start gap-3 mb-5">
+
+        <div class="w-50">
+          <div id="carouselExample1" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="4500">
+                <img src="./imagenes/as.jpg" class="d-block" alt="Plato 1">
+              </div>
+              <div class="carousel-item" data-bs-interval="4500">
+                <img src="./imagenes/taco.jpg" class="d-block" alt="Plato 2">
+              </div>
+              <div class="carousel-item" data-bs-interval="4500">
+                <img src="./imagenes/hamburguesa.jpg" class="d-block" alt="Plato 3">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample1" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample1" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+
+        <div class="w-50">
+          <div id="carouselExample2" class="carousel slide" data-bs-ride="carousel">
+
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="4500">
+                <img src="./imagenes/as.jpg" class="d-block w-100" alt="Plato 4">
+              </div>
+              <div class="carousel-item" data-bs-interval="4500">
+                <img src="./imagenes/taco.jpg" class="d-block w-100" alt="Plato 5">
+              </div>
+              <div class="carousel-item" data-bs-interval="4500">
+                <img src="./imagenes/hamburguesa.jpg" class="d-block w-100" alt="Plato 6">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample2" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample2" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 <footer>
   <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
   <p>+598 98 107 643</p>
@@ -60,6 +121,11 @@
     </a>
   </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
+</html>
+</body>
+
 </html>
