--- a/fronted-mejor/menu.html
+++ b/fronted-mejor/menu.html
@@ -10,49 +10,52 @@
 
 <body>
   <header>
-     <nav class="navbar">
-  <div class="nav-left">
-    <a href="index.html" title="Inicio">
-      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
-    </a>
-    <a href="sobre_nosotros.html" title="Sobre Nosotros">
-      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
-    </a>
-    <a href="opiniones.html" title="Opiniones">
-      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
-    </a>
-    <a href="menu.html" title="Menú">
-      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
-    </a>
-  </div>
-  <div class="nav-right">
-    <a href="reservas.html" title="Reservas">
-      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
-    </a>
-    <a href="calendario.html" title="Calendario">
-      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
-    </a>
-  </div>
-</nav>
-  </header>
+  <nav class="navbar">
+    <div class="nav-left">
+      <a href="index.html" title="Inicio" class="js-link nav-text">
+        Inicio
+      </a>
+      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
+        Sobre Nosotros
+      </a>
+      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
+        Opiniones
+      </a>
+      <a href="menu.html" title="Menú" class="js-link nav-text">
+        Menú
+      </a>
+    </div>
+    <div class="nav-right">
+      <a href="reservas.html" title="Reservas" class="js-link nav-text">
+        Reservas
+      </a>
+      <a href="calendario.html" title="Calendario" class="js-link nav-text">
+        Calendario
+      </a>
+    </div>
+  </nav>
+  
+</header>
   <main>
-    <section>
-      <h1>Menú</h1>
-      <div class="menu-item">
-        <h2>Hamburguesa Clásica</h2>
-        <p>Carne, queso cheddar, lechuga, tomate y mayonesa.</p>
-      </div>
-      <div class="menu-item">
-        <h2>Hamburguesa BBQ</h2>
-        <p>Carne, queso, cebolla caramelizada, tocino y salsa BBQ.</p>
-      </div>
-    </section>
+    <div class="container my-5">
+      <section>
+        <h1 class="text-center">Menú</h1>
+        <div class="menu-item">
+          <h2>Hamburguesa Clásica</h2>
+          <p>Carne, queso cheddar, lechuga, tomate y mayonesa.</p>
+        </div>
+        <div class="menu-item">
+          <h2>Hamburguesa BBQ</h2>
+          <p>Carne, queso, cebolla caramelizada, tocino y salsa BBQ.</p>
+        </div>
+      </section>
+    </div>
   </main>
 <footer>
   <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
   <p>+598 98 107 643</p>
   <p>&copy; 2025 Mestiza Street Food</p>
-  <div class="social-media">
+   <div class="social-media">
     <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
       <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
     </a>
