--- a/fronted-mejor/opiniones.html
+++ b/fronted-mejor/opiniones.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Opiniones - Restaurante Mestiza</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./style/style.css">
+<link rel="stylesheet" href="./style/style.css" data-global="true">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta charset="UTF-8">
 </head>
@@ -12,31 +12,31 @@
 
 <body>
   <header>
-    <nav class="navbar">
-  <div class="nav-left">
-    <a href="index.html" title="Inicio">
-      <img src="imagenes/pagina-de-inicio.png" alt="Inicio" class="social-icon">
-    </a>
-    <a href="sobre_nosotros.html" title="Sobre Nosotros">
-      <img src="imagenes/gente.png" alt="Sobre Nosotros" class="social-icon">
-    </a>
-    <a href="opiniones.html" title="Opiniones">
-      <img src="imagenes/opinion-del-cliente.png" alt="Opiniones" class="social-icon">
-    </a>
-    <a href="menu.html" title="Menú">
-      <img src="imagenes/bandeja-de-comida.png" alt="Menú" class="social-icon">
-    </a>
-  </div>
-  <div class="nav-right">
-    <a href="reservas.html" title="Reservas">
-      <img src="imagenes/recepcion.png" alt="Reservas" class="social-icon">
-    </a>
-    <a href="calendario.html" title="Calendario">
-      <img src="imagenes/calendario.png" alt="Calendario" class="social-icon">
-    </a>
-  </div>
-</nav>
-  </header>
+  <nav class="navbar">
+    <div class="nav-left">
+      <a href="index.html" title="Inicio" class="js-link nav-text">
+        Inicio
+      </a>
+      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
+        Sobre Nosotros
+      </a>
+      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
+        Opiniones
+      </a>
+      <a href="menu.html" title="Menú" class="js-link nav-text">
+        Menú
+      </a>
+    </div>
+    <div class="nav-right">
+      <a href="reservas.html" title="Reservas" class="js-link nav-text">
+        Reservas
+      </a>
+      <a href="calendario.html" title="Calendario" class="js-link nav-text">
+        Calendario
+      </a>
+    </div>
+  </nav>
+</header>
   <main class="container my-5">
     <h2 class="mb-3">Dejanos tu Opinión</h2>
     <form id="form-opinion">
@@ -83,7 +83,7 @@
     </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/opiniones.js"></script>
+    <script src="js/opiniones.js"></script>
 
 </body>
 </html>
