--- a/fronted-mejor/menu.html
+++ b/fronted-mejor/menu.html
@@ -1,69 +1,204 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Menú</title>
+  <title>Menú - Mestiza Street Food</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style/style.css">
 </head>
-<body class="pagina-blanca">
 
-<body>
+<body class="pagina-blanca menu-page">
+
   <header>
-  <nav class="navbar">
-    <div class="nav-left">
-      <a href="index.html" title="Inicio" class="js-link nav-text">
-        Inicio
-      </a>
-      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
-        Sobre Nosotros
-      </a>
-      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
-        Opiniones
-      </a>
-      <a href="menu.html" title="Menú" class="js-link nav-text">
-        Menú
-      </a>
-    </div>
-    <div class="nav-right">
-      <a href="reservas.html" title="Reservas" class="js-link nav-text">
-        Reservas
-      </a>
-      <a href="calendario.html" title="Calendario" class="js-link nav-text">
-        Calendario
-      </a>
-    </div>
-  </nav>
-  
-</header>
-  <main>
-    <div class="container my-5">
-      <section>
-        <h1 class="text-center">Menú</h1>
-        <div class="menu-item">
-          <h2>Hamburguesa Clásica</h2>
-          <p>Carne, queso cheddar, lechuga, tomate y mayonesa.</p>
-        </div>
-        <div class="menu-item">
-          <h2>Hamburguesa BBQ</h2>
-          <p>Carne, queso, cebolla caramelizada, tocino y salsa BBQ.</p>
-        </div>
-      </section>
-    </div>
-  </main>
-<footer>
-  <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-  <p>+598 98 107 643</p>
-  <p>&copy; 2025 Mestiza Street Food</p>
-   <div class="social-media">
-    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-      <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
-    </a>
-    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-      <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
-    </a>
-  </div>
-</footer>
+    <nav class="navbar">
+      <div class="nav-left">
+        <a href="index.html" title="Inicio" class="js-link nav-text">Inicio</a>
+        <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">Sobre Nosotros</a>
+        <a href="opiniones.html" title="Opiniones" class="js-link nav-text">Opiniones</a>
+        <a href="menu.html" title="Menú" class="js-link nav-text">Menú</a>
+      </div>
+      <div class="nav-right">
+        <a href="reservas.html" title="Reservas" class="js-link nav-text">Reservas</a>
+        <a href="calendario.html" title="Calendario" class="js-link nav-text">Calendario</a>
+      </div>
+    </nav>
 
+    <div class="menu-action-bar justify-content-end">
+      <a href="#" class="cart-icon-container position-relative" title="Ver Carrito" 
+   data-bs-toggle="offcanvas" data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas">
+  <img src="./imagenes/carrito-de-compras.png" alt="Carrito de Compras" class="cart-icon">
+  <span id="cart-counter" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+</a>
+    </div>
+  </header>
+
+  <main class="container my-5">
+    <h1 class="text-center mb-5">Nuestro Menú</h1>
+
+    <div id="notification-container" class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050;">
+    </div>
+
+    <section class="mb-5">
+      <h2 class="mb-4 border-bottom pb-2">Hamburguesas</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+        <div class="col">
+          <div class="card h-100 product-card" data-id="H1" data-name="Hamburguesa Clásica" data-precio="12.00">
+            <img src="./imagenes/as.jpg" class="card-img-top" alt="Hamburguesa Clásica">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Clásica</h5>
+              <p class="card-text flex-grow-1">Carne de res, queso cheddar, lechuga fresca, tomate y aderezo especial.
+              </p>
+              <p class="fw-bold">$12.00</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 product-card" data-id="H2" data-name="Hamburguesa BBQ" data-precio="15.50">
+            <img src="./imagenes/hamburguesa.jpg" class="card-img-top" alt="Hamburguesa BBQ">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">BBQ Ahumada</h5>
+              <p class="card-text flex-grow-1">Carne, tocino crujiente, aros de cebolla y la mejor salsa BBQ casera.</p>
+              <p class="fw-bold">$15.50</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 product-card" data-id="H3" data-name="Hamburguesa Vegana" data-precio="14.00">
+            <img src="./imagenes/" class="card-img-top" alt="Hamburguesa Vegana">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Veggie Power</h5>
+              <p class="card-text flex-grow-1">Medallón de lentejas y vegetales, aguacate y pan integral.</p>
+              <p class="fw-bold">$14.00</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 product-card" data-id="H4" data-name="Hamburguesa Doble" data-precio="18.00">
+            <img src="./imagenes/hamburguesa-doble.jpg" class="card-img-top" alt="Hamburguesa Doble">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Doble Tentación</h5>
+              <p class="card-text flex-grow-1">Dos carnes, triple queso, cebolla caramelizada y salsa tártara.</p>
+              <p class="fw-bold">$18.00</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mb-5">
+      <h2 class="mb-4 border-bottom pb-2">Tacos</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+        <div class="col">
+          <div class="card h-100 product-card" data-id="T1" data-name="Tacos de Cochinita" data-precio="9.50">
+            <img src="./imagenes/taco.jpg" class="card-img-top" alt="Tacos de Cochinita">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Cochinita Pibil</h5>
+              <p class="card-text flex-grow-1">Carne de cerdo marinada en achiote, con cebolla morada encurtida.</p>
+              <p class="fw-bold">$9.50</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 product-card" data-id="T2" data-name="Tacos al Pastor" data-precio="10.00">
+            <img src="./imagenes/tacos-pastor.jpg" class="card-img-top" alt="Tacos al Pastor">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Al Pastor</h5>
+              <p class="card-text flex-grow-1">Carne de cerdo adobada, piña, cilantro y un toque de salsa picante.</p>
+              <p class="fw-bold">$10.00</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 product-card" data-id="T3" data-name="Tacos de Pescado" data-precio="11.50">
+            <img src="./imagenes/tacos-pescado.jpg" class="card-img-top" alt="Tacos de Pescado">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">De Pescado</h5>
+              <p class="card-text flex-grow-1">Pescado empanizado, repollo rallado, crema ácida y salsa chipotle.</p>
+              <p class="fw-bold">$11.50</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 product-card" data-id="T4" data-name="Tacos de Camarón" data-precio="13.00">
+            <img src="./imagenes/tacos-camaron.jpg" class="card-img-top" alt="Tacos de Camarón">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">De Camarón</h5>
+              <p class="card-text flex-grow-1">Camarones salteados con verduras, crema de aguacate y toque de lima.</p>
+              <p class="fw-bold">$13.00</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mb-5">
+      <h2 class="mb-4 border-bottom pb-2">Guarniciones</h2>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <div class="card h-100 product-card" data-id="G1" data-name="Papas Fritas Clásicas" data-precio="4.00">
+            <img src="./imagenes/papas-clasicas.jpg" class="card-img-top" alt="Papas Fritas Clásicas">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">Papas Fritas Clásicas</h5>
+              <p class="card-text flex-grow-1">Papas fritas</p>
+              <p class="fw-bold">$4.00</p>
+              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+    <p>+598 98 107 643</p>
+    <p>&copy; 2025 Mestiza Street Food</p>
+    <div class="social-media">
+      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
+        <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
+      </a>
+      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
+        <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
+      </a>
+    </div>
+  </footer>
+<div class="offcanvas offcanvas-end" tabindex="-1" id="cartOffcanvas" aria-labelledby="cartOffcanvasLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="cartOffcanvasLabel">Tu Pedido</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
+  </div>
+  <div class="offcanvas-body d-flex flex-column">
+    <div id="cart-items-list" class="flex-grow-1 overflow-auto mb-3">
+      <p class="text-muted text-center">El carrito está vacío. ¡Añade algo delicioso!</p>
+    </div>
+
+    <div class="mt-auto border-top pt-3">
+      <div class="d-flex justify-content-between fw-bold mb-2">
+        <span>Total:</span>
+        <span id="cart-total">$0.00</span>
+      </div>
+      <div class="d-grid gap-2">
+        <button class="btn btn-success btn-lg">Continuar Pedido</button>
+        <button class="btn btn-outline-secondary">Ver Opciones de Pago</button>
+        <button class="btn btn-outline-danger" id="clear-cart-btn">Vaciar Carrito</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./js/menu.js"></script>
 </body>
+
 </html>
