logo incluido arriba izq

--- a/fronted-mejor/menu.html
+++ b/fronted-mejor/menu.html
@@ -13,33 +13,55 @@
 <body class="pagina-blanca menu-page">
 
   <header>
-    <nav class="navbar">
-      <div class="nav-left">
-        <a href="index.html" title="Inicio" class="js-link nav-text">Inicio</a>
-        <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">Sobre Nosotros</a>
-        <a href="opiniones.html" title="Opiniones" class="js-link nav-text">Opiniones</a>
-        <a href="menu.html" title="Menú" class="js-link nav-text">Menú</a>
-      </div>
-      <div class="nav-right">
-        <a href="reservas.html" title="Reservas" class="js-link nav-text">Reservas</a>
-        <a href="calendario.html" title="Calendario" class="js-link nav-text">Calendario</a>
-      </div>
-    </nav>
-
-    <div class="menu-action-bar justify-content-end">
-      <a href="#" class="cart-icon-container position-relative" title="Ver Carrito" data-bs-toggle="offcanvas"
-        data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas">
-        <img src="./imagenes/carrito-de-compras.png" alt="Carrito de Compras" class="cart-icon">
-        <span id="cart-counter"
-          class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+  <nav class="navbar">
+    <div class="nav-left">
+      <a href="index.html" title="Volver al Menú" class="js-link nav-logo">
+        <img 
+          src="./imagenes/FOTO_2.png" 
+          alt="Logo" 
+          style="height: 140px; margin-right: 15px;" 
+        >
+      </a>
+      
+      <a href="index.html" title="Inicio" class="js-link nav-text">
+        Inicio
+      </a>
+      
+      <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
+        Sobre Nosotros
+      </a>
+      <a href="opiniones.html" title="Opiniones" class="js-link nav-text">
+        Opiniones
+      </a>
+      <a href="menu.html" title="Menú" class="js-link nav-text">
+        Menú
       </a>
     </div>
-    <div class="nav-icons d-flex align-items-center">
+    <div class="nav-right">
+      <a href="reservas.html" title="Reservas" class="js-link nav-text">
+        Reservas
+      </a>
+      <a href="calendario.html" title="Calendario" class="js-link nav-text">
+        Calendario
+      </a>
+    </div>
+  </nav>
+
+  <div class="menu-action-bar justify-content-end">
+    <a href="#" class="cart-icon-container position-relative" title="Ver Carrito" data-bs-toggle="offcanvas"
+      data-bs-target="#cartOffcanvas" aria-controls="cartOffcanvas">
+      <img src="./imagenes/carrito-de-compras.png" alt="Carrito de Compras" class="cart-icon">
+      <span id="cart-counter"
+        class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">0</span>
+    </a>
+  </div>
+  <div class="nav-icons d-flex align-items-center">
 
     <a href="estado.html" id="tracking-icon-link" class="nav-icon me-3 p-2" style="display:none; color: #ffc107;">
-        <i class="bi bi-basket3-fill" style="font-size: 1.5rem;"></i>
+      <i class="bi bi-basket3-fill" style="font-size: 1.5rem;"></i>
     </a>
-  </header>
+  </div>
+</header>
 
   <main class="container my-5">
     <h1 class="text-center mb-5">Nuestro Menú</h1>
