--- a/fronted-mejor/calendario.html
+++ b/fronted-mejor/calendario.html
@@ -20,9 +20,14 @@
  <header>
   <nav class="navbar">
     <div class="nav-left">
+      <a href="index.html" title="Logo Inicio" class="js-link nav-logo">
+        <img src="./imagenes/FOTO_2.png" alt="Logo" style="height: 140px; margin-right: 15px;"> 
+      </a>
+      
       <a href="index.html" title="Inicio" class="js-link nav-text">
         Inicio
       </a>
+      
       <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
         Sobre Nosotros
       </a>
@@ -42,6 +47,7 @@
       </a>
     </div>
   </nav>
+</header>
 </header>
     <main class="container my-5">
       <h1 class="text-center card-title">Calendario de Eventos</h1>
