--- a/fronted-mejor/index.html
+++ b/fronted-mejor/index.html
@@ -15,9 +15,18 @@
 <header>
   <nav class="navbar">
     <div class="nav-left">
+      <a href="index.html" title="Volver al Menú" class="js-link nav-logo">
+        <img 
+          src="./imagenes/FOTO_2.png" 
+          alt="Logo" 
+          style="height: 140px; margin-right: 15px;" 
+        >
+      </a>
+      
       <a href="index.html" title="Inicio" class="js-link nav-text">
         Inicio
       </a>
+      
       <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">
         Sobre Nosotros
       </a>
