--- a/fronted-mejor/sobre_nosotros.html
+++ b/fronted-mejor/sobre_nosotros.html
@@ -14,18 +14,26 @@
 <body class="pagina-blanca">
 
   <header>
-    <nav class="navbar">
-      <div class="nav-left">
-        <a href="index.html" title="Inicio" class="js-link nav-text">Inicio</a>
-        <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">Sobre Nosotros</a>
-        <a href="opiniones.html" title="Opiniones" class="js-link nav-text">Opiniones</a>
-        <a href="menu.html" title="Menú" class="js-link nav-text">Menú</a>
-      </div>
-      <div class="nav-right">
-        <a href="reservas.html" title="Reservas" class="js-link nav-text">Reservas</a>
-        <a href="calendario.html" title="Calendario" class="js-link nav-text">Calendario</a>
-      </div>
-    </nav>
+   <nav class="navbar">
+  <div class="nav-left">
+    <a href="index.html" title="Volver al Menú" class="js-link nav-logo">
+      <img 
+        src="./imagenes/FOTO_2.png" 
+        alt="Logo" 
+        style="height: 140px; margin-right: 15px;" 
+      >
+    </a>
+    
+    <a href="index.html" title="Inicio" class="js-link nav-text">Inicio</a>
+    <a href="sobre_nosotros.html" title="Sobre Nosotros" class="js-link nav-text">Sobre Nosotros</a>
+    <a href="opiniones.html" title="Opiniones" class="js-link nav-text">Opiniones</a>
+    <a href="menu.html" title="Menú" class="js-link nav-text">Menú</a>
+  </div>
+  <div class="nav-right">
+    <a href="reservas.html" title="Reservas" class="js-link nav-text">Reservas</a>
+    <a href="calendario.html" title="Calendario" class="js-link nav-text">Calendario</a>
+  </div>
+</nav>
   </header>
 
   <main class="container py-5 mt-5">
