AVANCE EN PAGO Y ESTADO

--- a/fronted-mejor/estado.html
+++ b/fronted-mejor/estado.html
@@ -14,15 +14,16 @@
 <body class="bg-light min-vh-100 d-flex flex-column">
 
     <div class="container my-5 flex-grow-1 d-flex justify-content-center align-items-center">
-        
+
         <div class="tracking-card shadow-lg p-4 p-md-5 bg-white rounded-4">
             <h1 class="text-center mb-4">Estado de tu Pedido</h1>
-            <p class="text-center text-muted mb-5">N° de Pedido: **#CARQUEJA-12345** - Estimado de entrega: **30-45 seg**</p>
+            <p class="text-center text-muted mb-5">N° de Pedido: **#CARQUEJA-12345** - Estimado de entrega: **30-45
+                seg**</p>
 
             <div class="tracking-container">
 
                 <div class="tracking-line">
-                    <div id="tracking-line-progress"></div> 
+                    <div id="tracking-line-progress"></div>
                 </div>
 
                 <div class="tracking-step" id="step-1" data-step="1">
@@ -67,14 +68,16 @@
 
             </div>
             <div class="text-center mt-5">
-                <a href="menu.html" class="btn btn-success btn-lg shadow-sm">Volver al Menú</a>
+                <a href="menu.html" class="btn btn-success btn-lg shadow-sm">Volver</a>
+                <a href="opiniones.html" class="btn btn-success btn-lg shadow-sm">Dejar una opinión</a>
+
             </div>
 
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/estado.js"></script> 
+    <script src="./js/estado.js"></script>
 </body>
 
 </html>
