--- a/fronted-mejor/pago.html
+++ b/fronted-mejor/pago.html
@@ -7,8 +7,8 @@
     <title>Pago - Mestiza Street Food</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="stylesheet" href="./style/style_pago.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style_pago.css">
 
 </head>
 
@@ -31,7 +31,7 @@
         </a>
 
         <h3 class="mb-4 text-center">Finalizar Compra</h3>
-        
+
         <div class="separator mb-4">
             <hr class="line">
             <p>o pagar con tarjeta de crédito</p>
@@ -46,7 +46,8 @@
                     <input id="card-number" class="form-control input_field pe-5" type="text"
                         placeholder="XXXX XXXX XXXX XXXX" required maxlength="19">
                     <span id="card-logo" class="position-absolute top-50 translate-middle-y me-3 end-0"></span>
-                    <div class="invalid-feedback" id="card-number-feedback" style="display: none; color: red; font-size: 0.875em;"></div>
+                    <div class="invalid-feedback" id="card-number-feedback"
+                        style="display: none; color: red; font-size: 0.875em;"></div>
                 </div>
             </div>
 
@@ -61,12 +62,15 @@
                     <label for="expiry-date" class="input_label">Fecha de Vencimiento</label>
                     <input id="expiry-date" class="form-control input_field" type="text" placeholder="MM/AA" required
                         maxlength="5">
-                    <div class="invalid-feedback" id="expiry-date-feedback" style="display: none; color: red; font-size: 0.875em;"></div>
+                    <div class="invalid-feedback" id="expiry-date-feedback"
+                        style="display: none; color: red; font-size: 0.875em;"></div>
                 </div>
                 <div class="input_container" style="width: 100px;">
                     <label for="cvv" class="input_label">CVV/CVC</label>
                     <input id="cvv" class="form-control input_field" type="text" placeholder="123" required
                         maxlength="3">
+                    <div class="invalid-feedback" id="cvv-feedback"
+                        style="display: none; color: red; font-size: 0.875em;"></div>
                 </div>
             </div>
 
