--- a/fronted-mejor/index.html
+++ b/fronted-mejor/index.html
@@ -117,24 +117,23 @@
     </div>
   </div>
 </main>
-<footer>
-  <p>Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
-  <p>+598 98 107 643</p>
-  <p>&copy; 2025 Mestiza Street Food</p>
-  <div class="social-media">
-    <a href="https://www.instagram.com/mestiza_street_food/" target="_blank">
-      <img src="./imagenes/instagram.png" alt="Instagram" class="social-icon">
-    </a>
-    <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank">
-      <img src="./imagenes/facebook.png" alt="Facebook" class="social-icon">
-    </a>
+<footer class="bg-light py-4 mt-5">
+  <div class="container text-center">
+    <p class="mb-1">Bazzurro 1747 esq. B. Manton, Colonia Del Sacramento, Colonia, Uruguay 70000</p>
+    <p class="mb-1">Tel: +598 98 107 643</p>
+    <p class="mb-0 small text-muted">&copy; 2025 Mestiza Street Food</p>
+    <div class="mt-3">
+      <a href="https://www.instagram.com/mestiza_street_food/" target="_blank" rel="noopener" class="me-2">
+        <img src="./imagenes/instagram.png" alt="Instagram" style="height:28px;">
+      </a>
+      <a href="https://www.facebook.com/p/mestiza_sabores_caseros-100036866965455/?_rdr" target="_blank" rel="noopener">
+        <img src="./imagenes/facebook.png" alt="Facebook" style="height:28px;">
+      </a>
+    </div>
   </div>
 </footer>
+
+<!-- scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
-
-</html>
-</body>
-
 </html>
