--- a/fronted-mejor/menu.html
+++ b/fronted-mejor/menu.html
@@ -68,132 +68,26 @@
 
     <div id="notification-container" class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050;">
     </div>
-    <section class="mb-5">
-      <h2 class="mb-4 border-bottom pb-2">Hamburguesas</h2>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-        <div class="col">
-          <div class="card h-100 product-card" data-id="H1" data-name="Burger Mestiza" data-size-custom="true"
-            data-toppings-default="Cheddar,Salsa Mestiza,Cebollitas,Pepinillos Encurtidos"
-            data-toppings-allowed="Cheddar,Salsa Mestiza,Cebollitas,Pepinillos Encurtidos,Tomate,Lechuga,Mostaza,Ketchup">
-            <img src="./imagenes/hamburguesa_mestiza.heic" class="card-img-top" alt="Burger Mestiza">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Burger Mestiza</h5>
-              <p class="card-text flex-grow-1">Pan de papa con queso, carne smash 110gr, cheddar, salsa "Mestiza",
-                cebollitas y pepinillos encurtidos.</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
 
-        <div class="col">
-          <div class="card h-100 product-card" data-id="H2" data-name="Cheeseburger Dani" data-size-custom="true"
-            data-toppings-default="Cheddar,Mostaza,Ketchup,Cebollitas Brunoise"
-            data-toppings-allowed="Cheddar,Mostaza,Ketchup,Cebollitas Brunoise">
-            <img src="./imagenes/hamburguesa dani.png" class="card-img-top" alt="Cheeseburger Dani">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Cheeseburger Dani</h5>
-              <p class="card-text flex-grow-1">Pan de papa con queso, carne smash 110gr, cheddar, mostaza, ketchup y
-                cebollitas brunoise.</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-100 product-card" data-id="H3" data-name="Cheeseburger Javito" data-size-custom="true"
-            data-toppings-default="Cheddar" data-toppings-allowed="Cheddar">
-            <img src="./imagenes/" class="card-img-top" alt="Cheeseburger Javito">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Cheeseburger Javito</h5>
-              <p class="card-text flex-grow-1">Pan de papa con queso, carne smash 110gr, cheddar.</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card h-100 product-card" data-id="H4" data-name="Cheeseburger Kids" data-precio="300">
-            <img src="./imagenes/" class="card-img-top" alt="Cheeseburger Kids">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Cheeseburger Kids</h5>
-              <p class="card-text flex-grow-1">Pan de papa con queso, carne smash 110gr, cheddar, y aderezos.</p>
-              <p class="fw-bold">$300</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100 product-card" data-id="H5" data-name="Vegetariana" data-precio="300">
-            <img src="./imagenes/" class="card-img-top" alt="Vegetariana">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Vegetariana</h5>
-              <p class="card-text flex-grow-1">Pan de papa con queso, rodajas de zuccini a la plancha, salteado de
-                verduras (morrón, zanahoria y cebolla), cheddar, salsa "Mestiza", cebollitas y pepinillos encurtidos.
-              </p>
-              <p class="fw-bold">$300</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
+    <!-- Contenedor dinámico: los productos vendrán desde la DB y producto.js los renderiza aquí -->
+    <section id="catalog" class="mb-5">
+      <div id="productos-grid" class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+        <!-- producto.js llenará este grid con cards -->
       </div>
     </section>
 
-    <section class="mb-5">
-      <h2 class="mb-4 border-bottom pb-2">Tacos x 2</h2>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-        <div class="col">
-          <div class="card h-100 product-card" data-id="T1" data-name="Taco de Carne" data-precio="400" data-size-custom="true" data-toppings-default="" data-toppings-allowed="Guacamole,Salsa Picante">
-            <img src="./imagenes/taco carne.heic" class="card-img-top" alt="Tacos de Cochinita">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Taco de Carne</h5>
-              <p class="card-text flex-grow-1">Tortilla artesanal, base cremosa de queso, carne cortada a cuchillo,
-                salteado de vegetales (cebolla, morrón, zanahoria) + Toppings</p>
-              <p class="fw-bold">$400</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100 product-card" data-id="T2" data-name="Vegetariano" data-precio="400" data-size-custom="true" data-toppings-default="" data-toppings-allowed="Guacamole,Salsa Picante">
-            <img src="./imagenes/taco vegetariano.png" class="card-img-top" alt="Tacos al Pastor">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Vegetariano</h5>
-              <p class="card-text flex-grow-1">Tortilla artesanal, base cremosa de queso, zucchini, salteado de
-                vegetales (cebolla, morrón, zanahoria) + Toppings</p>
-              <p class="fw-bold">$400</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100 product-card" data-id="T3" data-name="Vegano" data-precio="400" data-size-custom="true" data-toppings-default="" data-toppings-allowed="Guacamole,Salsa Picante">
-            <img src="./imagenes/" class="card-img-top" alt="Vegano">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Vegano</h5>
-              <p class="card-text flex-grow-1">Tortilla artesanal, zucchini, salteado de vegetales (vebolla, morrón,
-                zanahoria) + Toppings</p>
-              <p class="fw-bold">$400</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-    </section>
-
-    <section class="mb-5">
-      <h2 class="mb-4 border-bottom pb-2">Papas Fritas</h2>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
-        <div class="col">
-          <div class="card h-100 product-card" data-id="H1" data-name="Papas Fritas" data-precio="120">
-            <img src="./imagenes/" class="card-img-top" alt="Papas Fritas">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">Papas Fritas</h5>
-              <p class="card-text flex-grow-1">Porción individual.</p>
-              <button class="btn btn-success mt-auto btn-add-to-cart">Añadir al carrito</button>
-            </div>
-          </div>
-        </div>
-
-    </section>
+    <!-- (opcional) Mantén el table-wrapper si también quieres ver tabla/admin en esta página -->
+    <div class="productos-wrapper d-none">
+      <h2>Productos (tabla)</h2>
+      <div class="table-wrap">
+        <table class="table">
+          <thead>
+            <tr><th>Nombre</th><th>Descripción</th><th>Precio</th></tr>
+          </thead>
+          <tbody id="contenedor-productos"></tbody>
+        </table>
+      </div>
+    </div>
   </main>
 
   <footer>
@@ -234,7 +128,10 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./js/menu.js"></script>
+  <script src="./js/menu.js" defer></script>
+  <script src="./js/cart.js" defer></script>   <!-- <- nuevo: debe ir antes de producto.js -->
+  <script src="./js/producto.js" defer></script>
+  <script src="./js/pedidos.js" defer></script>
 
   <div class="modal fade" id="customizationModal" tabindex="-1" aria-labelledby="customizationModalLabel"
     aria-hidden="true">
